--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "description": "Maleficarum profiler component",
     "require": {
         "php": ">=7.0",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "maleficarum/ioc": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
@@ -13,5 +14,11 @@
         "psr-4": {
             "Maleficarum\\Profiler\\": "src/Profiler/"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:pharaun13/maleficarum-ioc.git"
+        } 
+    ]
 }
